--- a/deploy.yml
+++ b/deploy.yml
@@ -11,7 +11,7 @@
     command: docker build -t vms ~/deploy/vms
 
   - name: run docker image
-    command: docker run -d -p 9000:9000 --device=/dev/ttyS1 vms
+    command: docker run -d --privileged -p 9000:9000 -e VESNA=true -e SERIAL=/dev/ttyS2 vms
     register: vms
 
   - debug: msg="{{ vms.stdout }}"
