--- a/deploy.yml
+++ b/deploy.yml
@@ -1,8 +1,10 @@
 ---
 - hosts: 193.2.205.215
   tasks:
-  - name: download git project
-    git: repo=https://github.com/matevzv/vesna-management-system dest=~/deploy/vms
+  - name: deploy repo changes
+    synchronize:
+      src: .
+      dest: ~/deploy/vms
 
   - name: Copy GitHub deploy key
     copy: remote_src=True src=/etc/videk/id_rsa_github dest=~/deploy/vms
