--- a/deploy-test.yml
+++ b/deploy-test.yml
@@ -1,6 +1,9 @@
 ---
 - hosts: 193.2.205.212
   tasks:
+  - name: Creates directory
+    file: path=~/deploy/vms state=directory
+
   - name: deploy repo changes
     synchronize:
       src: .
